# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
configuration/: base.yml  production.yml
migrations/: 20220218225329_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
