[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.15"
serde = "1.0.132"
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.9.0"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
log = "0.4.14"
tracing-subscriber = { version = "0.3.4", features = ["registry", "env-filter" ] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.2"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
tokio = "1"
actix-rt = "2"
reqwest = "0.11"
once_cell = "1.9.0"
